# test-data-pipeline

./: .gitignore  asd.MD  funny.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
pipeline/: main.py
pipeline/extractors/: kafka_consumer.py  s3_reader.py
pipeline/loaders/: warehouse.py
pipeline/transformers/: enrichment.py
tests/: test_enrichment.py
