[project]
name = "data-pipeline"
version = "0.3.0"
description = "ETL pipeline consuming events from Kafka, transforming, and loading to data warehouse"
requires-python = ">=3.10"
dependencies = [
    "kafka-python>=2.0.2",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.4",
    "boto3>=1.34.0",
    "pydantic>=2.5.3",
    "click>=8.1.7",
    "structlog>=24.1.0",
]
